--- a/scss/_portpage.scss
+++ b/scss/_portpage.scss
@@ -154,6 +154,7 @@
 .proj-links ul {
     text-align: center;
     width: 90%;
+    background-color: grey;
     margin: 0 auto;
 }
 .proj-links ul li {
